# rgpui

./: .gitattributes  .gitignore  AGENTS.md  ANALYSIS.md  Cargo.toml  UPSTREAM-PRS.json  readme.md
crates/examples/mouse_passthrough_ceshi/: Cargo.toml
crates/rgpui/: Cargo.toml  README.md
crates/rgpui-3d/: Cargo.toml
crates/rgpui-3d/examples/: scenix_cube.rs  scenix_model.rs  scenix_skin.rs
crates/rgpui-3d/src/: context.rs  lib.rs  math.rs  shader.rs  types.rs
crates/rgpui-adabraka-ui/: Cargo.toml  readme.md
crates/rgpui-adabraka-ui/examples/: accordion_demo.rs  accordion_styled_demo.rs  alert_demo.rs  alert_dialog_styled_demo.rs  animations_demo.rs  app_menu_demo.rs  app_menu_styled_demo.rs  audio_player_demo.rs  avatar_group_demo.rs  avatar_styled_demo.rs  badge_styled_demo.rs  bar_chart_demo.rs  bottom_sheet_styled_demo.rs  breadcrumbs_styled_demo.rs  button_features_demo.rs  button_styled_demo.rs  calendar_styled_demo.rs  card_demo.rs  card_styled_demo.rs  carousel_demo.rs  chart_demo.rs  checkbox_styled_demo.rs  click_test.rs  collapsible_styled_demo.rs  color_picker_demo.rs  combobox_demo.rs  command_palette_demo.rs  command_palette_styled_demo.rs  complex_layout_demo.rs  components_showcase.rs  confirm_dialog_styled_demo.rs  context_menu_styled_demo.rs  countdown_demo.rs  data_table_demo.rs  data_table_styled_demo.rs  date_picker_demo.rs  debug_into_element.rs  debug_scroll.rs  demo.rs  demo_no_scroll.rs  (+104 more)
crates/rgpui-adabraka-ui/src/: animate.rs  animated_state.rs  animation_coordinator.rs  animations.rs  content_transition.rs  fonts.rs  gestures.rs  gpui_ext.rs  http.rs  icon_config.rs  layout.rs  lib.rs  prelude.rs  responsive.rs  scroll_physics.rs  spring.rs  styled_ext.rs  transitions.rs  util.rs  virtual_list.rs
crates/rgpui-character/: Cargo.toml
crates/rgpui-character/docs/: desktop_pet_mouse_passthrough.md
crates/rgpui-character/examples/: README.md  desktop_pet.rs
crates/rgpui-character/src/: animation.rs  asset.rs  behavior.rs  core.rs  physics.rs  render.rs  rgpui_character.rs  runtime.rs
crates/rgpui-component/: Cargo.toml  build.rs  readme.md
crates/rgpui-component-assets/: Cargo.toml  readme.md
crates/rgpui-component-assets/src/: lib.rs  native_assets.rs  wasm_assets.rs
crates/rgpui-component-macros/: Cargo.toml  readme.md
crates/rgpui-component-macros/src/: derive_into_plot.rs
crates/rgpui-component-workspce/rgpui-component-assets/: Cargo.toml  readme.md
crates/rgpui-component-workspce/rgpui-webview/: Cargo.toml
crates/rgpui-component/examples/: WEB.md  components_overview.rs  data_display_example.rs  dialog_example.rs  form_controls_example.rs
crates/rgpui-component/locales/: ui.yml
crates/rgpui-component/src/: accordion.rs  actions.rs  animation.rs  badge.rs  checkbox.rs  clipboard.rs  color_picker.rs  combobox.rs  description_list.rs  element_ext.rs  event.rs  geometry.rs  global_state.rs  group_box.rs  history.rs  icon.rs  inspector.rs  kbd.rs  label.rs  lib.rs  link.rs  notification.rs  pagination.rs  popover.rs  radio.rs  rating.rs  root.rs  select.rs  separator.rs  sheet.rs  skeleton.rs  slider.rs  spinner.rs  status_bar.rs  styled.rs  switch.rs  tag.rs  title_bar.rs  tooltip.rs  tree.rs  (+3 more)
crates/rgpui-linux/: Cargo.toml  README.md
crates/rgpui-linux/src/: linux.rs
crates/rgpui-macros/: Cargo.toml  README.md
crates/rgpui-macros/src/: bench.rs  derive_action.rs  derive_app_context.rs  derive_inspector_reflection.rs  derive_refineable.rs  derive_render.rs  gpui_macros.rs  property_test.rs  rgpui_macros.rs  styles.rs  test.rs
crates/rgpui-macros/tests/: derive_context.rs
crates/rgpui-platform/: Cargo.toml  README.md
crates/rgpui-platform/src/: rgpui_platform.rs
crates/rgpui-term/: Cargo.toml
crates/rgpui-term/src/: block.rs  config.rs  lib.rs  middleware.rs  terminal.rs  terminal_element.rs  terminal_view.rs  theme_manager.rs
crates/rgpui-tokio/: Cargo.toml  README.md
crates/rgpui-tokio/src/: rgpui_tokio.rs
crates/rgpui-webview/: Cargo.toml  readme.md
crates/rgpui-webview/example/: demo.rs  rgpui_webview_demo.rs
crates/rgpui-webview/src/: lib.rs
crates/rgpui-wgpu/: Cargo.toml  README.md
crates/rgpui-wgpu/benches/: layout_line.rs
crates/rgpui-wgpu/src/: cosmic_text_system.rs  rgpui_wgpu.rs  shaders.wgsl  shared_context.rs  wgpu_atlas.rs  wgpu_context.rs  wgpu_renderer.rs
crates/rgpui-windows/: Cargo.toml  README.md
crates/rgpui-windows/src/: auto_launch.rs  clipboard.rs  direct_write.rs  directx_atlas.rs  dispatcher.rs  display.rs  events.rs  focused_window.rs  global_hotkey.rs  keyboard.rs  notifications.rs  platform.rs  rgpui_windows.rs  shaders.hlsl  tray.rs  vsync.rs  window.rs
crates/rgpui-yororen-ui/: Cargo.toml  readme.md
crates/rgpui/examples/: README.md  a11y.rs  active_state_bug.rs  anchor.rs  animation.rs  daemon_app.rs  data_table.rs  drag_drop.rs  focus_visible.rs  gif_viewer.rs  gradient.rs  grid_layout.rs  hello_world.rs  image_gallery.rs  image_loading.rs  input.rs  layer_shell.rs  list_example.rs  mouse_pressure.rs  move_entity_between_windows.rs  on_window_close_quit.rs  opacity.rs  ownership_post.rs  painting.rs  paths_bench.rs  pattern.rs  popover.rs  screen_capture.rs  scrollable.rs  set_menus.rs  shadow.rs  tab_stop.rs  testing.rs  text.rs  text_layout.rs  text_wrapper.rs  transparent.rs  tray.rs  tray_simple.rs  tree.rs  (+4 more)
crates/rgpui/src/: _accessibility.rs  _ownership_and_data_flow.rs  action.rs  app.rs  arena.rs  asset_cache.rs  bounds_tree.rs  collections.rs  color.rs  element.rs  executor.rs  geometry.rs  global.rs  gpui.rs  input.rs  inspector.rs  interactive.rs  key_dispatch.rs  keymap.rs  path_builder.rs  platform.rs  platform_scheduler.rs  profiler.rs  queue.rs  rgpui.rs  scene.rs  scheduler.rs  shared_string.rs  single_instance.rs  style.rs  styled.rs  taffy.rs  (+8 more)
crates/rgpui_macros/: Cargo.toml  README.md
crates/rgpui_platform/: Cargo.toml  README.md
crates/rgpui_windows/: Cargo.toml  README.md
examples/rgpui_async_demo/: Cargo.toml
examples/rgpui_term_basic/: Cargo.toml
examples/rgpui_term_component_integration/: Cargo.toml  README.md
(+980 files in other folders)
