[workspace]
resolver = "3"

members = [
    "crates/gpui",
    "crates/gpui_linux",
    "crates/gpui_macos",
    "crates/gpui_windows",
    "crates/gpui_web",
    "crates/gpui_platform",
    "crates/gpui_shared_string",
    "crates/gpui_tokio",
    "crates/gpui_util",
    "crates/gpui_wgpu",
    "crates/gpui_macros",
    "crates/collections",
    "crates/http_client",
    "crates/refineable",
    "crates/refineable/derive_refineable",
    "crates/scheduler",
    "crates/sum_tree",
    "crates/util",
    "crates/util_macros",
    "crates/reqwest_client",
    "crates/media",
    "crates/perf",
    "crates/ztracing",
    "crates/ztracing_macro",
    "crates/http_client_tls",

]

[workspace.package]
edition = "2024"
publish = false

[workspace.dependencies]
gpui = { path = "crates/gpui", default-features = false }
gpui_shared_string = { path = "crates/gpui_shared_string" }
gpui_linux = { path = "crates/gpui_linux", default-features = false }
gpui_macos = { path = "crates/gpui_macos", default-features = false }
gpui_macros = { path = "crates/gpui_macros" }
gpui_platform = { path = "crates/gpui_platform", default-features = false }
gpui_web = { path = "crates/gpui_web" }
gpui_wgpu = { path = "crates/gpui_wgpu" }
gpui_windows = { path = "crates/gpui_windows", default-features = false }
gpui_tokio = { path = "crates/gpui_tokio" }
gpui_util = { path = "crates/gpui_util" }
collections = { path = "crates/collections" }
http_client = { path = "crates/http_client" }
refineable = { path = "crates/refineable" }
derive_refineable = { path = "crates/refineable/derive_refineable" }
scheduler = { path = "crates/scheduler" }
sum_tree = { path = "crates/sum_tree" }
util = { path = "crates/util" }
util_macros = { path = "crates/util_macros" }
reqwest_client = { path = "crates/reqwest_client" }
media = { path = "crates/media" }
perf = { path = "crates/perf" }
ztracing = { path = "crates/ztracing" }
ztracing_macro = { path = "crates/ztracing_macro" }
zlog = { path = "crates/zlog" }
http_client_tls = { path = "crates/http_client_tls" }


anyhow = "1.0.86"
async-channel = "2.5.0"
backtrace = "0.3"
bitflags = "2.6.0"
chrono = { version = "0.4", features = ["serde"] }
ctor = "0.4.0"
derive_more = { version = "2.1.1", features = [
    "add",
    "add_assign",
    "deref",
    "deref_mut",
    "display",
    "from_str",
    "mul",
    "mul_assign",
    "not",
] }
futures = "0.3.32"
futures-concurrency = "7.7.1"
hdrhistogram = "7"
image = "0.25.1"
inventory = "0.3.19"
itertools = "0.14.0"
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
parking_lot = "0.12.1"
pollster = "0.4.0"
postage = { version = "0.5", features = ["futures-traits"] }
profiling = "1"
proptest = { git = "https://github.com/proptest-rs/proptest", rev = "3dca198a8fef1b32e3a66f1e1897c955b4dc5b5b", features = ["attr-macro"] }
proptest-derive = "0.8.0"
rand = "0.9"
regex = "1.5"
schemars = { version = "1.0", features = ["indexmap2"] }
serde = { version = "1.0.221", features = ["derive", "rc"] }
serde_json = { version = "1.0.144", features = ["preserve_order", "raw_value"] }
slotmap = "1.0.6"
smallvec = { version = "1.6", features = ["union", "const_new"] }
stacksafe = "0.1"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.12"
url = "2.2"
uuid = { version = "1.1.2", features = ["v4", "v5", "v7", "serde"] }
web-time = "1.1.0"
env_logger = "0.11"
unicode-segmentation = "1.10"
scap = { git = "https://github.com/zed-industries/scap", rev = "4afea48c3b002197176fb19cd0f9b180dd36eaac", default-features = false, package = "zed-scap", version = "0.0.8-zed" }
wasm-bindgen = "0.2.120"
cocoa = "=0.26.0"
cocoa-foundation = "=0.2.0"
core-foundation = "=0.10.0"
core-foundation-sys = "0.8.6"
core-video = { version = "0.5.2", features = ["metal"] }
mach2 = "0.5"
metal = "0.33"
objc = "0.2"
objc2-app-kit = { version = "0.3", default-features = false, features = [ "NSGraphics" ] }
objc2-foundation = { version = "=0.3.2", default-features = false, features = [
    "NSArray",
    "NSAttributedString",
    "NSBundle",
    "NSCoder",
    "NSData",
    "NSDate",
    "NSDictionary",
    "NSEnumerator",
    "NSError",
    "NSGeometry",
    "NSNotification",
    "NSNull",
    "NSObjCRuntime",
    "NSObject",
    "NSProcessInfo",
    "NSRange",
    "NSRunLoop",
    "NSString",
    "NSURL",
    "NSUndoManager",
    "NSValue",
    "objc2-core-foundation",
    "std",
] }
indexmap = { version = "2.7.0", features = ["serde"] }
rustc-hash = "2.1.0"
heck = "0.5"
proc-macro2 = "1.0.93"
quote = "1.0.9"
syn = { version = "2.0.101", features = ["full", "extra-traits", "visit-mut"] }
async-compression = { version = "0.4", features = ["bzip2", "gzip", "futures-io"] }
bytes = "1.0"

http = "1.1"
http-body = "1.0"
serde_urlencoded = "0.7"
async-fs = "2.1"
async-tar = "0.5.1"
async_zip = { version = "0.0.18", features = ["deflate", "deflate64"] }


sha2 = "0.10"

tempfile = "3.20.0"
dunce = "1.0"
futures-lite = "1.13"
globset = "0.4"
percent-encoding = "2.3.2"
rust-embed = { version = "8.11", features = ["include-exclude"] }

serde_json_lenient = { version = "0.2", features = [
    "preserve_order",
    "raw_value",
] }
shlex = "1.3.0"
take-until = "0.2.0"
unicase = "2.6"
git2 = { version = "0.20.1", default-features = false, features = ["vendored-libgit2"] }
pretty_assertions = { version = "1.3.0", features = ["unstable"] }
dirs = "6.0"
smol = "2.0"
walkdir = "2.5"
which = "6.0.0"
libc = "0.2"
nix = "0.29"
async-task = "4.7"
heapless = "0.9.2"
rayon = "1.8"

tracing = "0.1.40"

ashpd = { version = "0.13", default-features = false, features = [
    "async-io",
    "notification",
    "open_uri",
    "file_chooser",
    "settings",
    "trash"
] }

wgpu = { git = "https://github.com/zed-industries/wgpu.git", branch = "v29" }
semver = { version = "1.0", features = ["serde"] }
windows-core = "0.61"

reqwest = { git = "https://github.com/zed-industries/reqwest.git", rev = "c15662463bda39148ba154100dd44d3fba5873a4", default-features = false, features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "multipart",
    "rustls-tls-native-roots",
    "socks",
    "stream",
], package = "zed-reqwest", version = "0.12.15-zed" }
tokio = { version = "1" }
rustls = { version = "0.23.26" }
rustls-platform-verifier = "0.5.0"



[workspace.dependencies.windows]
version = "0.61"
features = [
    "Foundation_Numerics",
    "Globalization_DateTimeFormatting",
    "Storage_Search",
    "Storage_Streams",
    "System_Threading",
    "UI_ViewManagement",
    "Wdk_System_SystemServices",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_DirectManipulation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Hlsl",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Security_Credentials",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_DataExchange",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Performance",
    "Win32_System_Pipes",
    "Win32_System_RestartManager",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_System_WinRT",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_Ime",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Pointer",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media",
]

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"

declare_interior_mutable_const = "deny"

redundant_clone = "deny"
disallowed_methods = "deny"

# We currently do not restrict any style rules
# as it slows down shipping code to Zed.
#
# Running ./script/clippy can take several minutes, and so it's
# common to skip that step and let CI do it. Any unexpected failures
# (which also take minutes to discover) thus require switching back
# to an old branch, manual fixing, and re-pushing.
#
# In the future we could improve this by either making sure
# Zed can surface clippy errors in diagnostics (in addition to the
# rust-analyzer errors), or by having CI fix style nits automatically.
style = { level = "allow", priority = -1 }

# Individual rules that have violations in the codebase:
type_complexity = "allow"
let_underscore_future = "allow"

# Motivation: We use `vec![a..b]` a lot when dealing with ranges in text, so
# warning on this rule produces a lot of noise.
single_range_in_vec_init = "allow"

# in Rust it can be very tedious to reduce argument count without
# running afoul of the borrow checker.
too_many_arguments = "allow"

# We often have large enum variants yet we rarely actually bother with splitting them up.
large_enum_variant = "allow"

# Boolean expressions can be hard to read, requiring only the minimal form gets in the way
nonminimal_bool = "allow"

[workspace.metadata.cargo-machete]
ignored = [
    "bindgen",
    "cbindgen",
    "prost_build",
    "serde",
    "component",
    "documented",
    "sea-orm-macros",
]
