[workspace]
resolver = "3"

members = [
    "crates/rgpui",
    "crates/rgpui_linux",
    "crates/rgpui_macos",
    "crates/rgpui_windows",
    "crates/rgpui_web",
    "crates/rgpui_platform",
    "crates/rgpui_tokio",
    "crates/rgpui_wgpu",
    "crates/rgpui_macros",

]

[workspace.package]
edition = "2024"
publish = false

# ==================== 工作区依赖 ====================
[workspace.dependencies]
# ---- 内部 crates ----
rgpui = { path = "crates/rgpui", default-features = false }
rgpui_linux = { path = "crates/rgpui_linux", default-features = false }
rgpui_macos = { path = "crates/rgpui_macos", default-features = false }
rgpui_macros = { path = "crates/rgpui_macros" }
rgpui_platform = { path = "crates/rgpui_platform", default-features = false }
rgpui_web = { path = "crates/rgpui_web" }
rgpui_wgpu = { path = "crates/rgpui_wgpu" }
rgpui_windows = { path = "crates/rgpui_windows", default-features = false }
rgpui_tokio = { path = "crates/rgpui_tokio" }


# ---- 错误处理 ----
# 错误处理库
anyhow = "1.0.86"
# 自定义错误类型派生
thiserror = "2.0.12"
# 堆栈回溯
backtrace = "0.3"

# ---- 异步与并发 ----
# 异步通道
async-channel = "2.5.0"
# 异步文件系统操作
async-fs = "2.1"
# 异步任务调度
async-task = "4.7"
# 异步压缩
async-compression = { version = "0.4", features = ["bzip2", "gzip", "futures-io"] }
# 异步 tar 归档
async-tar = "0.5.1"
# 异步 zip
async_zip = { version = "0.0.18", features = ["deflate", "deflate64"] }
# 异步 Futures 工具
futures = "0.3.32"
# 并发 Futures 组合子
futures-concurrency = "7.7.1"
# 轻量级 Futures
futures-lite = "1.13"
# 轻量级异步运行时
smol = "2.0"
# 阻塞等待异步结果
pollster = "0.4.0"
# 响应式流
postage = { version = "0.5", features = ["futures-traits"] }

# ---- 序列化与数据格式 ----
# 序列化/反序列化框架
serde = { version = "1.0.221", features = ["derive", "rc"] }
# JSON 处理
serde_json = { version = "1.0.144", features = ["preserve_order", "raw_value"] }
# 宽松 JSON 解析
serde_json_lenient = { version = "0.2", features = ["preserve_order", "raw_value"] }
# URL 编码序列化
serde_urlencoded = "0.7"
# 保持插入顺序的哈希表
indexmap = { version = "2.7.0", features = ["serde"] }
# 高效句柄映射
slotmap = "1.0.6"
# 小数组优化的 Vec
smallvec = { version = "1.6", features = ["union", "const_new"] }
# 字节缓冲区
bytes = "1.0"

# ---- 时间日期 ----
# 日期时间处理
chrono = { version = "0.4", features = ["serde"] }
# Web 平台时间 API
web-time = "1.1.0"

# ---- 日志、追踪与性能分析 ----
# 日志门面
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
# 环境配置日志后端
env_logger = "0.11"
# 结构化追踪
tracing = "0.1.40"
# 性能分析宏
profiling = "1"
# 高动态范围直方图
hdrhistogram = "7"

# ---- 集合与迭代器 ----
# 扩展迭代器功能
itertools = "0.14.0"
# 数据并行
rayon = "1.8"

# ---- 字符串与文本 ----
# Unicode 文本分割
unicode-segmentation = "1.10"
# 正则表达式
regex = "1.5"
# glob 模式匹配
globset = "0.4"
# shell 词法分析
shlex = "1.3.0"
# 流式读取直到分隔符
take-until = "0.2.0"
# Unicode 大小写不敏感比较
unicase = "2.6"
# URL 百分号编码
percent-encoding = "2.3.2"
# 枚举字符串工具
strum = { version = "0.27.2", features = ["derive"] }

# ---- 随机与测试 ----
# 随机数生成
rand = "0.9"
# 属性测试
#proptest = { git = "https://github.com/proptest-rs/proptest", rev = "3dca198a8fef1b32e3a66f1e1897c955b4dc5b5b", features = ["attr-macro"] }
proptest = { version = "1.11.0",features = ["attr-macro"] }
# 属性测试派生
proptest-derive = "0.8.0"
# 美观的断言差异
pretty_assertions = { version = "1.3.0", features = ["unstable"] }

# ---- 派生宏与代码生成 ----
# 构造函数宏
ctor = "0.4.0"
# 类型注册表
inventory = "0.3.19"
# 常用 trait 派生
derive_more = { version = "2.1.1", features = [
    "add",
    "add_assign",
    "deref",
    "deref_mut",
    "display",
    "from_str",
    "mul",
    "mul_assign",
    "not",
] }
# 栈安全检测
stacksafe = "0.1"

# ---- 并发与同步 ----
# 高性能锁
parking_lot = "0.12.1"

# ---- 位标志与标识符 ----
# 位标志宏
bitflags = "2.6.0"
# UUID 生成
uuid = { version = "1.1.2", features = ["v4", "v5", "v7", "serde"] }

# ---- 图像处理 ----
# 图像编解码
image = "0.25.1"

# ---- 模式匹配与校验 ----
# JSON Schema 生成
schemars = { version = "1.0", features = ["indexmap2"] }

# ---- URL 处理 ----
# URL 解析
url = "2.2"

# ---- 屏幕捕获 ----
# 跨平台屏幕捕获
scap = { git = "https://github.com/zed-industries/scap", rev = "4afea48c3b002197176fb19cd0f9b180dd36eaac", default-features = false, package = "zed-scap", version = "0.0.8-zed" }

# ---- macOS 平台 ----
# WebAssembly 绑定
wasm-bindgen = "0.2.120"
# Cocoa 框架绑定
cocoa = "=0.26.0"
# Cocoa 基础绑定
cocoa-foundation = "=0.2.0"
# CoreFoundation 绑定
core-foundation = "=0.10.0"
# CoreFoundation 系统接口
core-foundation-sys = "0.8.6"
# CoreVideo 绑定
core-video = { version = "0.5.2", features = ["metal"] }
# Mach 内核接口
mach2 = "0.5"
# Metal GPU API 绑定
metal = "0.33"
# Objective-C 运行时
objc = "0.2"
# AppKit 绑定
objc2-app-kit = { version = "0.3", default-features = false, features = [ "NSGraphics" ] }
# Foundation 框架绑定
objc2-foundation = { version = "=0.3.2", default-features = false, features = [
    "NSArray",
    "NSAttributedString",
    "NSBundle",
    "NSCoder",
    "NSData",
    "NSDate",
    "NSDictionary",
    "NSEnumerator",
    "NSError",
    "NSGeometry",
    "NSNotification",
    "NSNull",
    "NSObjCRuntime",
    "NSObject",
    "NSProcessInfo",
    "NSRange",
    "NSRunLoop",
    "NSString",
    "NSURL",
    "NSUndoManager",
    "NSValue",
    "objc2-core-foundation",
    "std",
] }

# ---- 哈希与映射 ----
# 编译器级快速哈希
rustc-hash = "2.1.0"

# ---- 过程宏工具 ----
# 命名风格转换
heck = "0.5"
# 过程宏 token 处理
proc-macro2 = "1.0.93"
# Rust 代码生成
quote = "1.0.9"
# Rust 源码解析
syn = { version = "2.0.101", features = ["full", "extra-traits", "visit-mut"] }

# ---- HTTP 网络 ----
# HTTP 类型
http = "1.1"
# HTTP Body trait
http-body = "1.0"

# ---- 文件与目录 ----
# 临时文件
tempfile = "3.20.0"
# 规范化路径
dunce = "1.0"
# 标准目录路径
dirs = "6.0"
# 递归目录遍历
walkdir = "2.5"
# 查找可执行文件
which = "6.0.0"
# 嵌入文件到二进制
rust-embed = { version = "8.11", features = ["include-exclude"] }

# ---- 加密与哈希 ----
# SHA-2 哈希
sha2 = "0.10"

# ---- Git ----
# Git 操作
git2 = { version = "0.20.1", default-features = false, features = ["vendored-libgit2"] }

# ---- 系统 ----
# C 标准库绑定
libc = "0.2"
# Unix API 绑定
nix = "0.29"
# 无堆分配容器
heapless = "0.9.2"

# ---- Linux 平台 ----
# Freedesktop Portal 接口
ashpd = { version = "0.13", default-features = false, features = [
    "async-io",
    "notification",
    "open_uri",
    "file_chooser",
    "settings",
    "trash"
] }

# ---- GPU 渲染 ----
# WebGPU 实现
#wgpu = { git = "https://github.com/zed-industries/wgpu.git", branch = "v29" }
wgpu = { version = "29.0" }

# ---- 版本语义 ----
# 语义化版本
semver = { version = "1.0", features = ["serde"] }

# ---- Windows 平台 ----
# Windows 核心类型
windows-core = "0.61"

# ---- Reqwest HTTP 客户端 ----
# HTTP 客户端
reqwest = { version = "0.13", features = ["json","charset","http2","multipart","socks","stream"] }

#reqwest = { git = "https://github.com/zed-industries/reqwest.git", rev = "c15662463bda39148ba154100dd44d3fba5873a4", default-features = false, features = [
#    "charset",
#    "http2",
#    "macos-system-configuration",
#    "multipart",
#    "rustls-tls-native-roots",
#    "socks",
#    "stream",
#], package = "zed-reqwest", version = "0.12.15-zed" }

# ---- Tokio 异步运行时 ----
# 异步运行时
tokio = { version = "1" }

# ---- TLS ----
# TLS 实现
rustls = { version = "0.23.26" }
# 平台证书验证
rustls-platform-verifier = "0.5.0"

criterion = { version = "0.5", features = ["html_reports"] }



[workspace.dependencies.windows]
version = "0.61"
features = [
    "Foundation_Numerics",
    "Globalization_DateTimeFormatting",
    "Storage_Search",
    "Storage_Streams",
    "System_Threading",
    "UI_ViewManagement",
    "Wdk_System_SystemServices",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_DirectManipulation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Hlsl",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Security_Credentials",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_DataExchange",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Performance",
    "Win32_System_Pipes",
    "Win32_System_RestartManager",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_System_WinRT",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_Ime",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Pointer",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media",
]

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"

declare_interior_mutable_const = "deny"

redundant_clone = "deny"
disallowed_methods = "deny"

# We currently do not restrict any style rules
# as it slows down shipping code to Zed.
#
# Running ./script/clippy can take several minutes, and so it's
# common to skip that step and let CI do it. Any unexpected failures
# (which also take minutes to discover) thus require switching back
# to an old branch, manual fixing, and re-pushing.
#
# In the future we could improve this by either making sure
# Zed can surface clippy errors in diagnostics (in addition to the
# rust-analyzer errors), or by having CI fix style nits automatically.
style = { level = "allow", priority = -1 }

# Individual rules that have violations in the codebase:
type_complexity = "allow"
let_underscore_future = "allow"

# Motivation: We use `vec![a..b]` a lot when dealing with ranges in text, so
# warning on this rule produces a lot of noise.
single_range_in_vec_init = "allow"

# in Rust it can be very tedious to reduce argument count without
# running afoul of the borrow checker.
too_many_arguments = "allow"

# We often have large enum variants yet we rarely actually bother with splitting them up.
large_enum_variant = "allow"

# Boolean expressions can be hard to read, requiring only the minimal form gets in the way
nonminimal_bool = "allow"

[workspace.metadata.cargo-machete]
ignored = [
    "bindgen",
    "cbindgen",
    "prost_build",
    "serde",
    "component",
    "documented",
    "sea-orm-macros",
]
