[package]
name = "rgpui-3d"
description = "scenix 3D 渲染引擎的 rgpui 集成，支持 3D 场景渲染和合成"
publish=true
license = "Apache-2.0"
version.workspace = true
edition.workspace = true
repository = "https://github.com/launcher-rs/rgpui"

[features]
default = ["shared-wgpu"]
scenix-renderer = ["scenix/renderer", "scenix/loader"]
shared-wgpu = ["dep:rgpui-wgpu"]

[dependencies]
rgpui = { workspace = true }
scenix = { version = "1", features = ["renderer", "loader"] }
wgpu = { workspace = true }
image = { workspace = true }
bytemuck = "1"
gltf = "1.4"
smallvec = { workspace = true }
rgpui-wgpu = { workspace = true, optional = true }

[dev-dependencies]
rgpui-platform = { workspace = true, features = ["font-kit", "wayland", "x11"] }
pollster = { workspace = true }
smol = { workspace = true }

[[example]]
name = "scenix_cube"
path = "examples/scenix_cube.rs"

[[example]]
name = "scenix_model"
path = "examples/scenix_model.rs"

[[example]]
name = "scenix_skin"
path = "examples/scenix_skin.rs"

[lints]
workspace = true
