[package]
name = "rgpui-character"
version.workspace = true
edition.workspace = true
publish = true
description = "rgpui 桌宠与 UI 角色运行时系统"
license = "Apache-2.0"
repository = "https://github.com/launcher-rs/rgpui.git"


[lib]
path = "src/rgpui_character.rs"
doctest = false

[dependencies]
thiserror = "2.0.12"

[lints]
workspace = true