[package]
name = "rgpui-component-assets"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
rgpui.workspace = true
log.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rust-embed = { version = "8.7.2", features = ["interpolate-folder-path", "include-exclude"] }

[target.'cfg(target_family = "wasm")'.dependencies]
reqwest = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[lints]
workspace = true
