[package]
name = "rgpui-component-macros"
version = "0.1.1"
edition.workspace = true
publish.workspace = true
description = "组件库过程宏"
license.workspace = true
repository = "https://github.com/launcher-rs/rgpui"

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[package.metadata.cargo-machete]
ignored = ["proc-macro2", "core-text"]
