[package]
name = "rgpui-component"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
description = "UI 组件库"
license.workspace = true


[lib]
doctest = false

[features]
decimal = ["dep:rust_decimal"]
inspector = ["rgpui/inspector"]

[dependencies]
anyhow.workspace = true
rgpui = { workspace = true }
rgpui-component-macros = { workspace = true }
rgpui-macros = { workspace = true }
notify.workspace = true
ropey.workspace = true
rust-i18n.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
smallvec.workspace = true
tracing.workspace = true
log.workspace = true

enum-iterator = "2.1.0"
itertools = "0.13.0"
once_cell = "1.19.0"
paste = "1"
regex = "1"
unicode-segmentation = "1.12.0"
uuid = "1.10"

# Async primitives (cross-platform, including WASM)
async-channel = "2.3.1"
futures = "0.3"

# Chart
num-traits = "0.2"
rust_decimal = { version = "1.37.0", optional = true }

# Markdown Parser
markdown = { version = "1.0.0", features = ["serde"] }

# HTML Parser
html5ever = "0.27"
markup5ever_rcdom = "0.3.0"

# Calendar
chrono = "0.4.38"

# Text search
aho-corasick = "1.1.3"

# Cross-platform time APIs (zero-cost on native, uses web APIs on WASM)
instant = { version = "0.1", features = ["wasm-bindgen"] }

# Native-only dependencies (not available on WASM)
[target.'cfg(not(target_family = "wasm"))'.dependencies]
smol.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-text = "=21.0.0"

[lints]
workspace = true
