[package]
name = "rgpui-component"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "UI 组件库"
license.workspace = true
repository = "https://github.com/launcher-rs/rgpui"

[lib]
doctest = false

[features]
decimal = ["dep:rust_decimal"]
inspector = ["rgpui/inspector"]

[dependencies]
anyhow.workspace = true
rgpui = { workspace = true }
rgpui-component-macros = { workspace = true }
rgpui-macros = { workspace = true }
notify.workspace = true
ropey.workspace = true
rust-i18n.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
smallvec.workspace = true
tracing.workspace = true
log.workspace = true

enum-iterator = "2.1.0"
itertools = "0.13.0"
lsp-types.workspace = true
once_cell = "1.19.0"
paste = "1"
regex = "1"
unicode-segmentation = "1.12.0"
uuid = "1.10"

# Async primitives (cross-platform, including WASM)
async-channel = "2.3.1"
futures = "0.3"

# Chart
num-traits = "0.2"
rust_decimal = { version = "1.37.0", optional = true }

# Markdown Parser
markdown = { version = "1.0.0", features = ["serde"] }

# HTML Parser
html5ever = "0.27"
markup5ever_rcdom = "0.3.0"

# Calendar
chrono = "0.4.38"

# Text search
aho-corasick = "1.1.3"

# Cross-platform time APIs (zero-cost on native, uses web APIs on WASM)
instant = { version = "0.1", features = ["wasm-bindgen"] }

# Native-only dependencies (not available on WASM)
[target.'cfg(not(target_family = "wasm"))'.dependencies]
smol.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-text = "=21.0.0"
# Native menu (NativeMenu) - drives AppKit NSMenu via objc2.
raw-window-handle = "0.6"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
    "NSMenu",
    "NSMenuItem",
    "NSView",
    "NSResponder",
    "NSEvent",
    "NSImage",
] }
objc2-foundation = { version = "0.3", features = ["NSData", "NSString", "NSGeometry"] }

[target.'cfg(target_os = "windows")'.dependencies]
# Native menu (NativeMenu) - drives Win32 popup menus.
raw-window-handle = "0.6"
resvg = "0.45.1"
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_GdiPlus",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Memory",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
rgpui = { workspace = true, features = ["test-support"] }
rgpui-component-assets = {workspace = true}
rgpui-platform = { workspace = true }
indoc = "2"

[[example]]
name = "dialog_example"
path = "examples/dialog_example.rs"

[[example]]
name = "components_overview"
path = "examples/components_overview.rs"

[[example]]
name = "button_example"
path = "examples/button_example.rs"

[[example]]
name = "input_example"
path = "examples/input_example.rs"

[[example]]
name = "form_controls_example"
path = "examples/form_controls_example.rs"

[[example]]
name = "select_example"
path = "examples/select_example.rs"

[[example]]
name = "data_display_example"
path = "examples/data_display_example.rs"

[[example]]
name = "navigation_example"
path = "examples/navigation_example.rs"

[[example]]
name = "feedback_example"
path = "examples/feedback_example.rs"