[package]
name = "rgpui-macros"
version = "0.2.0"
edition.workspace = true
publish.workspace = true
license = "Apache-2.0"
description = "Macros used by rgpui"
repository = "https://github.com/launcher-rs/rgpui"

[lints]
workspace = true

[features]
inspector = []

[lib]
path = "src/rgpui_macros.rs"
proc-macro = true
doctest = true

[dependencies]
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
rgpui = { workspace = true, features = ["inspector"] }
