[package]
name = "rgpui-platform"
version.workspace = true
edition.workspace = true
publish = true
description = "平台选择入口"
license = "Apache-2.0"
repository = "https://github.com/launcher-rs/rgpui"

[lints]
workspace = true

[lib]
path = "src/rgpui_platform.rs"

[features]
default = []
multithreaded = ["rgpui-web/multithreaded"]
font-kit = ["rgpui-macos/font-kit"]
test-support = ["rgpui/test-support", "rgpui-macos/test-support"]
screen-capture = ["rgpui/screen-capture", "rgpui-macos/screen-capture", "rgpui-windows/screen-capture", "rgpui-linux/screen-capture"]
runtime_shaders = ["rgpui-macos/runtime_shaders"]
wayland = ["rgpui-linux/wayland"]
x11 = ["rgpui-linux/x11"]

[dependencies]
rgpui.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
rgpui-macos.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
rgpui-windows.workspace = true
rgpui = { workspace = true, features = ["windows-manifest"] }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
rgpui-linux.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
rgpui-web = { workspace = true, default-features = false }
console_error_panic_hook = "0.1.7"
